--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>I can push to github</h1>
     <h2>Yay mama I can code now</h2>
     <h3>This is exciting</h3>
+    <p>This is exciting website</p>
+    <img src="Oppo-A15s.jpg" alt="">
 </body>
 </html>
